require both input and response to be specified

--- a/apps/example/app.html
+++ b/apps/example/app.html
@@ -17,6 +17,7 @@
 			<button data-click="post">post</button>
 			<div data-display="pong"></div>
 			<div data-display="posts"></div>
+			<div data-display="hello"></div>
 		</main>
 		<script type="module" src="./renderer.js"></script>
 	</body>
