refactor: drop separate schema

--- a/apps/example/app.html
+++ b/apps/example/app.html
@@ -13,11 +13,11 @@
 			<hr />
 			<pre data-display="location"></pre>
 			<hr />
-			<button data-click="ping">ping</button>
+			<button data-click="req">req</button>
 			<button data-click="post">post</button>
-			<div data-display="pong"></div>
+			<div data-display="res"></div>
+			<div data-display="pongs"></div>
 			<div data-display="posts"></div>
-			<div data-display="hello"></div>
 		</main>
 		<script type="module" src="./renderer.js"></script>
 	</body>
