--- a/apps/example/app.html
+++ b/apps/example/app.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>app</title>
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="default-src 'self' app:"
+		/>
 	</head>
 	<body>
 		<div id="app"></div>
