fix(example): fix dist js file refs

--- a/apps/example/app.html
+++ b/apps/example/app.html
@@ -19,6 +19,6 @@
 			<div data-display="pongs"></div>
 			<div data-display="posts"></div>
 		</main>
-		<script type="module" src="./renderer.js"></script>
+		<script type="module" src="./renderer.mjs"></script>
 	</body>
 </html>
